--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    
+    
+    
+}
+@font-face {
+    font-family: 'inter';
+    src: url('assets/fonts/Inter-Regular.ttf');
+}
